Rename first ipynb

--- a/notebooks/word2vec.ipynb
+++ b/notebooks/word2vec.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext tensorboard"
+    "# word2vec\n",
+    "\n",
+    "Taken from https://www.tensorflow.org/tutorials/text/word2vec"
    ]
   },
   {
@@ -31,7 +32,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load the TensorBoard notebook extension\n",
+    "%load_ext tensorboard"
+   ]
   },
   {
    "cell_type": "code",
