Add dev notes to Python notebooks

--- a/notebooks/glove.ipynb
+++ b/notebooks/glove.ipynb
@@ -9,7 +9,12 @@
     "\n",
     "This notebook implements a model that uses pretrained GloVe word embeddings.\n",
     "\n",
-    "From https://keras.io/examples/nlp/pretrained_word_embeddings/"
+    "Inspired by https://keras.io/examples/nlp/pretrained_word_embeddings/\n",
+    "\n",
+    "> **_NOTE_** This notebook is still a work in progress as of 5/2/2023.\n",
+    "\n",
+    "- Author: Sasha Petrenko <sap625@mst.edu>\n",
+    "- Date: 5/2/2023"
    ]
   },
   {
