--- a/notebooks/tokenizer.ipynb
+++ b/notebooks/tokenizer.ipynb
@@ -8,7 +8,12 @@
     "# tokenizer\n",
     "\n",
     "This notebook runs some examples using hugging face tokenizers.\n",
-    "From https://huggingface.co/docs/transformers/preprocessing"
+    "Inspired by https://huggingface.co/docs/transformers/preprocessing\n",
+    "\n",
+    "> **_NOTE_** This notebook is still a work in progress as of 5/2/2023.\n",
+    "\n",
+    "- Author: Sasha Petrenko <sap625@mst.edu>\n",
+    "- Date: 5/2/2023"
    ]
   },
   {
