--- a/notebooks/word2vec.ipynb
+++ b/notebooks/word2vec.ipynb
@@ -7,7 +7,14 @@
    "source": [
     "# word2vec\n",
     "\n",
-    "Taken from https://www.tensorflow.org/tutorials/text/word2vec"
+    "This notebook explores the use of pretrained word2vec models and the training of a small-scale one for the purposes of the OAR project.\n",
+    "\n",
+    "Inspired by https://www.tensorflow.org/tutorials/text/word2vec\n",
+    "\n",
+    "> **_NOTE_** This notebook is still a work in progress as of 5/2/2023.\n",
+    "\n",
+    "- Author: Sasha Petrenko <sap625@mst.edu>\n",
+    "- Date: 5/2/2023"
    ]
   },
   {
