--- a/notebooks/word2vec.ipynb
+++ b/notebooks/word2vec.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "> **_NOTE_** This notebook is still a work in progress as of 5/2/2023.\n",
     "\n",
-    "- Author: Sasha Petrenko <sap625@mst.edu>\n",
+    "- Author: Sasha Petrenko <petrenkos@mst.edu>\n",
     "- Date: 5/2/2023"
    ]
   },
