--- a/dev/examples/experiments/simple_experiment.ipynb
+++ b/dev/examples/experiments/simple_experiment.ipynb
@@ -37,8 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Activating project at `~/work/OAR/OAR`\n",
-      "[ Info: OAR.GSymbol[OAR.GSymbol{String}(\"SL2\", true), OAR.GSymbol{String}(\"SW5\", true), OAR.GSymbol{String}(\"PL1\", true), OAR.GSymbol{String}(\"PW4\", true)]\n"
+      "[ Info: OAR.GSymbol{String}[OAR.GSymbol{String}(\"SL3\", true), OAR.GSymbol{String}(\"SW7\", true), OAR.GSymbol{String}(\"PL3\", true), OAR.GSymbol{String}(\"PW5\", true)]\n"
      ]
     }
    ],
