build based on f566502

--- a/dev/examples/experiments/gramart.ipynb
+++ b/dev/examples/experiments/gramart.ipynb
@@ -51,7 +51,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(OAR.VectoredDataSplit{OAR.GSymbol{String}, Int64}: dim=4, n_train=105, n_test=45:\ntrain_x: (105,) Vector{Vector{OAR.GSymbol{String}}}\ntest_x: (45,) Vector{Vector{OAR.GSymbol{String}}}\ntrain_y: (105,) Vector{Int64}\ntest_y: (45,) Vector{Int64}\n, OAR.CFG{String}(N:4, S:4, P:4, T:40))"
+      "text/plain": "(OAR.VectoredDataSplit{GSymbol{String}, Int64}: dim=4, n_train=105, n_test=45:\ntrain_x: (105,) Vector{Vector{GSymbol{String}}}\ntest_x: (45,) Vector{Vector{GSymbol{String}}}\ntrain_y: (105,) Vector{Int64}\ntest_y: (45,) Vector{Int64}\n, OAR.CFG{String}(N:4, S:4, P:4, T:40))"
      },
      "metadata": {},
      "execution_count": 2
@@ -114,7 +114,7 @@
    "source": [
     "# Process the statements\n",
     "for statement in fs.train_x\n",
-    "    OAR.process_statement!(gramart, statement, 1)\n",
+    "    OAR.train!(gramart, statement)\n",
     "end"
    ],
    "metadata": {},
