--- a/dev/examples/experiments/simple_experiment.ipynb
+++ b/dev/examples/experiments/simple_experiment.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ Info: OAR.GSymbol{String}[OAR.GSymbol{String}(\"SL5\", true), OAR.GSymbol{String}(\"SW10\", true), OAR.GSymbol{String}(\"PL9\", true), OAR.GSymbol{String}(\"PW4\", true)]\n"
+      "[ Info: GSymbol{String}[GSymbol{String}(\"SL7\", true), GSymbol{String}(\"SW2\", true), GSymbol{String}(\"PL4\", true), GSymbol{String}(\"PW6\", true)]\n"
      ]
     }
    ],
