build based on 09da9cb

--- a/dev/examples/experiments/gramart.ipynb
+++ b/dev/examples/experiments/gramart.ipynb
@@ -188,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ Info: Supervised testing performance: 0.8\n"
+      "[ Info: Supervised testing performance: 0.8888888888888888\n"
      ]
     }
    ],
