--- a/dev/examples/experiments/kg.ipynb
+++ b/dev/examples/experiments/kg.ipynb
@@ -127,7 +127,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "GramART(ProtoNode[], OAR.CFG{String}(N:3, S:3, P:3, T:788), OAR.opts_GramART\n  rho: Float64 0.1\n  rho_lb: Float64 0.55\n  rho_ub: Float64 0.75\n  alpha: Float64 0.001\n  beta: Float64 1.0\n  max_epoch: Int64 1\n  terminated: Bool false\n, Int64[], Dict{String, Any}(\"n_categories\" => 0, \"n_clusters\" => 0, \"n_instance\" => Int64[]))"
+      "text/plain": "GramART(ProtoNode[], OAR.CFG{String}(N:3, S:3, P:3, T:788), OAR.opts_GramART\n  rho: Float64 0.05\n  rho_lb: Float64 0.55\n  rho_ub: Float64 0.75\n  alpha: Float64 0.001\n  beta: Float64 1.0\n  max_epoch: Int64 1\n  terminated: Bool false\n, Int64[], Dict{String, Any}(\"n_categories\" => 0, \"n_clusters\" => 0, \"n_instance\" => Int64[]))"
      },
      "metadata": {},
      "execution_count": 5
@@ -137,7 +137,7 @@
    "source": [
     "gramart = OAR.GramART(\n",
     "    grammar,\n",
-    "    rho=0.1,\n",
+    "    rho=0.05,\n",
     "    terminated=false,\n",
     ")"
    ],
@@ -147,7 +147,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Process the statements"
+    "## Train"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now we are ready to cluster the statements.\n",
+    "We do this with the `train!` function without supervised labels, indicating that we are learning on the samples alone."
    ],
    "metadata": {}
   },
@@ -155,12 +163,44 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
+    "# Process the statements\n",
     "for statement in statements\n",
     "    OAR.train!(gramart, statement)\n",
     "end"
    ],
    "metadata": {},
    "execution_count": 6
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Analysis"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can see how the clustering went by inspecting how many clusters we generated:"
+   ],
+   "metadata": {}
+  },
+  {
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ Info: Number of categories: 90\n"
+     ]
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "@info \"Number of categories: $(length(gramart.protonodes))\""
+   ],
+   "metadata": {},
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
