--- a/dev/examples/experiments/gramart.ipynb
+++ b/dev/examples/experiments/gramart.ipynb
@@ -77,7 +77,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "GramART(ProtoNode[], OAR.CFG{String}(N:4, S:4, P:4, T:40), OAR.opts_GramART\n  rho: Float64 0.7\n  rho_lb: Float64 0.55\n  rho_ub: Float64 0.75\n  alpha: Float64 0.001\n  beta: Float64 1.0\n  epochs: Int64 1\n  terminated: Bool false\n, Int64[], Dict{String, Any}(\"n_categories\" => 0, \"n_clusters\" => 0, \"n_instance\" => Int64[]))"
+      "text/plain": "GramART(ProtoNode[], OAR.CFG{String}(N:4, S:4, P:4, T:40), OAR.opts_GramART\n  rho: Float64 0.7\n  rho_lb: Float64 0.55\n  rho_ub: Float64 0.75\n  alpha: Float64 0.001\n  beta: Float64 1.0\n  epochs: Int64 1\n  terminated: Bool false\n, Int64[], Float64[], Float64[], Dict{String, Any}(\"n_categories\" => 0, \"n_clusters\" => 0, \"n_instance\" => Int64[]))"
      },
      "metadata": {},
      "execution_count": 3
@@ -163,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ Info: Number of categories: 53\n"
+      "[ Info: Number of categories: 49\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ Info: Supervised testing performance: 0.8\n"
+      "[ Info: Supervised testing performance: 0.8888888888888888\n"
      ]
     }
    ],
