build based on f98b842

--- a/dev/examples/experiments/gramart.ipynb
+++ b/dev/examples/experiments/gramart.ipynb
@@ -10,7 +10,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This example demonstrates the usage of a GramART module.\n",
+    "This example demonstrates the usage of a START module.\n",
     "This module is tested on a modified symbolic Iris dataset as a proof of concept, but it is capable of working on arbitrary symbolic datasets."
    ],
    "metadata": {}
@@ -68,7 +68,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We can finally initialize the GramART module using the grammar that we have describing the symbolic Iris dataset:"
+    "We can finally initialize the START module using the grammar that we have describing the symbolic Iris dataset:"
    ],
    "metadata": {}
   },
@@ -77,7 +77,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "GramART(ProtoNode[], OAR.CFG{String}(N:4, S:4, P:4, T:40), OAR.opts_GramART\n  rho: Float64 0.7\n  rho_lb: Float64 0.55\n  rho_ub: Float64 0.75\n  alpha: Float64 0.001\n  beta: Float64 1.0\n  epochs: Int64 1\n  terminated: Bool false\n, Int64[], Float64[], Float64[], Dict{String, Any}(\"n_categories\" => 0, \"n_clusters\" => 0, \"n_instance\" => Int64[]))"
+      "text/plain": "START(ProtoNode[], OAR.CFG{String}(N:4, S:4, P:4, T:40), OAR.opts_START\n  rho: Float64 0.7\n  rho_lb: Float64 0.55\n  rho_ub: Float64 0.75\n  alpha: Float64 0.001\n  beta: Float64 1.0\n  epochs: Int64 1\n  terminated: Bool false\n, Int64[], Float64[], Float64[], Dict{String, Any}(\"n_categories\" => 0, \"n_clusters\" => 0, \"n_instance\" => Int64[]))"
      },
      "metadata": {},
      "execution_count": 3
@@ -85,8 +85,8 @@
    ],
    "cell_type": "code",
    "source": [
-    "# Initialize the GramART module\n",
-    "gramart = OAR.GramART(bnf)"
+    "# Initialize the START module\n",
+    "gramart = OAR.START(bnf)"
    ],
    "metadata": {},
    "execution_count": 3
@@ -101,7 +101,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now that we have a GramART module, we should process the training dataset:"
+    "Now that we have a START module, we should process the training dataset:"
    ],
    "metadata": {}
   },
@@ -129,8 +129,8 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "# Initialize the GramART module\n",
-    "gramart_supervised = OAR.GramART(bnf)\n",
+    "# Initialize the START module\n",
+    "gramart_supervised = OAR.START(bnf)\n",
     "# Set the vigilance low for generalization\n",
     "gramart_supervised.opts.rho = 0.05\n",
     "# Train in supervised mode\n",
@@ -163,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ Info: Number of categories: 49\n"
+      "[ Info: Number of categories: 54\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ Info: Supervised testing performance: 0.8888888888888888\n"
+      "[ Info: Supervised testing performance: 0.9333333333333333\n"
      ]
     }
    ],
