--- a/dev/examples/experiments/kg.ipynb
+++ b/dev/examples/experiments/kg.ipynb
@@ -10,7 +10,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This script demonstrates the usage of a GramART module for analyzing biomedical data knowledge graphs.\n",
+    "This script demonstrates the usage of a START module for analyzing biomedical data knowledge graphs.\n",
     "Though the `OAR` project contains multiple such knowledge graphs, the Charcot-Marie-Tooth (CMT) dataset is used as an example here with the procedure remaining the same with other datasets."
    ],
    "metadata": {}
@@ -118,7 +118,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Initialize the GramART module"
+    "Initialize the START module"
    ],
    "metadata": {}
   },
@@ -127,7 +127,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "GramART(ProtoNode[], OAR.CFG{String}(N:3, S:3, P:3, T:788), OAR.opts_GramART\n  rho: Float64 0.05\n  rho_lb: Float64 0.55\n  rho_ub: Float64 0.75\n  alpha: Float64 0.001\n  beta: Float64 1.0\n  epochs: Int64 1\n  terminated: Bool false\n, Int64[], Float64[], Float64[], Dict{String, Any}(\"n_categories\" => 0, \"n_clusters\" => 0, \"n_instance\" => Int64[]))"
+      "text/plain": "START(ProtoNode[], OAR.CFG{String}(N:3, S:3, P:3, T:788), OAR.opts_START\n  rho: Float64 0.05\n  rho_lb: Float64 0.55\n  rho_ub: Float64 0.75\n  alpha: Float64 0.001\n  beta: Float64 1.0\n  epochs: Int64 1\n  terminated: Bool false\n, Int64[], Float64[], Float64[], Dict{String, Any}(\"n_categories\" => 0, \"n_clusters\" => 0, \"n_instance\" => Int64[]))"
      },
      "metadata": {},
      "execution_count": 5
@@ -135,7 +135,7 @@
    ],
    "cell_type": "code",
    "source": [
-    "gramart = OAR.GramART(\n",
+    "gramart = OAR.START(\n",
     "    grammar,\n",
     "    rho=0.05,\n",
     "    terminated=false,\n",
