--- a/dev/examples/tutorials/lerche.ipynb
+++ b/dev/examples/tutorials/lerche.ipynb
@@ -10,8 +10,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This example shows how the the [`Lerche.jl`](https://jamesrhester.github.io/Lerche.jl/dev/) parsing library works, which provides the necessary machinery to define `lark`-like grammars and parse statements into arbitrary Julia structures to interface with the GramART tools in this project.\n",
-    "These tools are demonstrated on the how to parse approximate symbolic statements of the real-valued Iris dataset back into a tree that can be used in GramART."
+    "This example shows how the the [`Lerche.jl`](https://jamesrhester.github.io/Lerche.jl/dev/) parsing library works, which provides the necessary machinery to define `lark`-like grammars and parse statements into arbitrary Julia structures to interface with the START tools in this project.\n",
+    "These tools are demonstrated on the how to parse approximate symbolic statements of the real-valued Iris dataset back into a tree that can be used in START."
    ],
    "metadata": {}
   },
@@ -94,11 +94,11 @@
    "cell_type": "code",
    "source": [
     "# The grammar tree subtypes from a Lerche Transformer\n",
-    "struct GramARTTree <: Transformer end\n",
+    "struct STARTTree <: Transformer end\n",
     "\n",
     "# The rules turn the terminals into `OAR` grammar symbols and statements into vectors\n",
-    "@rule iris_symb(t::GramARTTree, p) = OAR.GSymbol{String}(p[1], true)\n",
-    "@rule statement(t::GramARTTree, p) = Vector(p)"
+    "@rule iris_symb(t::STARTTree, p) = OAR.GSymbol{String}(p[1], true)\n",
+    "@rule statement(t::STARTTree, p) = Vector(p)"
    ],
    "metadata": {},
    "execution_count": 3
@@ -119,7 +119,7 @@
     "    iris_grammar,\n",
     "    parser=\"lalr\",\n",
     "    lexer=\"standard\",\n",
-    "    transformer=GramARTTree()\n",
+    "    transformer=STARTTree()\n",
     ");"
    ],
    "metadata": {},
