--- a/dev/examples/experiments/kg.ipynb
+++ b/dev/examples/experiments/kg.ipynb
@@ -77,7 +77,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2328-element Vector{Vector{GSymbol{String}}}:\n [GSymbol{String}(\"Charcot_Marie_Tooth_disease_axonal_type_2A2A\", true), GSymbol{String}(\"is_a\", true), GSymbol{String}(\"disease\", true)]\n [GSymbol{String}(\"Charcot_Marie_Tooth_disease_axonal_type_2A2A\", true), GSymbol{String}(\"is_caused_by\", true), GSymbol{String}(\"MFN2\", true)]\n [GSymbol{String}(\"Charcot_Marie_Tooth_disease_axonal_type_2A2A\", true), GSymbol{String}(\"inherited_by\", true), GSymbol{String}(\"AD\", true)]\n [GSymbol{String}(\"Charcot_Marie_Tooth_disease_axonal_type_2A2A\", true), GSymbol{String}(\"has_a_phenotype\", true), GSymbol{String}(\"Pain\", true)]\n [GSymbol{String}(\"Charcot_Marie_Tooth_disease_axonal_type_2A2A\", true), GSymbol{String}(\"has_a_phenotype\", true), GSymbol{String}(\"Mental_deterioration\", true)]\n [GSymbol{String}(\"1p36.22\", true), GSymbol{String}(\"is_a\", true), GSymbol{String}(\"gene_location\", true)]\n [GSymbol{String}(\"MFN2\", true), GSymbol{String}(\"has_gene_location\", true), GSymbol{String}(\"1p36.22\", true)]\n [GSymbol{String}(\"MFN2\", true), GSymbol{String}(\"is_a\", true), GSymbol{String}(\"gene\", true)]\n [GSymbol{String}(\"MFN2\", true), GSymbol{String}(\"is_on_chromosome\", true), GSymbol{String}(\"1\", true)]\n [GSymbol{String}(\"MFN2\", true), GSymbol{String}(\"codes_for\", true), GSymbol{String}(\"Mitofusin_2\", true)]\n ⋮\n [GSymbol{String}(\"Tyrosyl_tRNA_synthetase_1\", true), GSymbol{String}(\"has_disease_involvement\", true), GSymbol{String}(\"Neurodegeneration\", true)]\n [GSymbol{String}(\"Tyrosyl_tRNA_synthetase_1\", true), GSymbol{String}(\"has_disease_involvement\", true), GSymbol{String}(\"Neuropathy\", true)]\n [GSymbol{String}(\"Tyrosyl_tRNA_synthetase_1\", true), GSymbol{String}(\"has_a_domain\", true), GSymbol{String}(\"EGFCA\", true)]\n [GSymbol{String}(\"Tyrosyl_tRNA_synthetase_1\", true), GSymbol{String}(\"has_a_domain\", true), GSymbol{String}(\"EGFL\", true)]\n [GSymbol{String}(\"Tyrosyl_tRNA_synthetase_1\", true), GSymbol{String}(\"has_a_motif\", true), GSymbol{String}(\"SP\", true)]\n [GSymbol{String}(\"Tyrosyl_tRNA_synthetase_1\", true), GSymbol{String}(\"has_a_motif\", true), GSymbol{String}(\"RGD\", true)]\n [GSymbol{String}(\"Tyrosyl_tRNA_synthetase_1\", true), GSymbol{String}(\"is_located_at\", true), GSymbol{String}(\"extracellular\", true)]\n [GSymbol{String}(\"RGD\", true), GSymbol{String}(\"is_a\", true), GSymbol{String}(\"protein_motif\", true)]\n [GSymbol{String}(\"extracellular\", true), GSymbol{String}(\"is_a\", true), GSymbol{String}(\"protein_location\", true)]"
+      "text/plain": "Vector{Vector{GSymbol{String}}}\u001b[90m (alias for \u001b[39m\u001b[90mArray{Array{GSymbol{String}, 1}, 1}\u001b[39m\u001b[90m)\u001b[39m"
      },
      "metadata": {},
      "execution_count": 3
@@ -85,7 +85,8 @@
    ],
    "cell_type": "code",
    "source": [
-    "statements = OAR.get_kg_statements(edge_file)"
+    "statements = OAR.get_kg_statements(edge_file)\n",
+    "typeof(statements)"
    ],
    "metadata": {},
    "execution_count": 3
@@ -218,11 +219,11 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.3"
+   "version": "1.9.4"
   },
   "kernelspec": {
    "name": "julia-1.9",
-   "display_name": "Julia 1.9.3",
+   "display_name": "Julia 1.9.4",
    "language": "julia"
   }
  },
